# RastroSeguro_hackIAthon

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_rastroseguro-api.yml
.playwright-mcp/: page-2026-05-27T08-33-50-300Z.yml  page-2026-05-27T08-34-16-169Z.yml  page-2026-05-27T08-39-39-398Z.yml  page-2026-05-27T08-39-53-334Z.yml
.streamlit/: config.toml
api/: __init__.py  main.py  schemas.py
api/routes/: _errors.py  agent.py  claims.py  health.py  reports.py  simulator.py
app/: bootstrap.py  main.py
app/components/: data.py  layout.py
data/ecuador/: boost_summary.json  data_dictionary_ecuador.csv  inventario_links.tsv  (+2 more)
docs/: 01-guia-general-equipo.md  02-contratos-integracion.md  03-arquitectura-pipeline.md  04-demo-y-vistas.md  05-instrucciones-ejecucion.md  06-modelado-dataset-supabase.md  06-plan-jeremy-cerebro-antifraude.md  README.md  arquitectura.md  guia-tecnica.md  limitaciones.md  modelo_datos.md  organizacion-equipo.md  pitch-ejecutivo.md  planteamiento-tecnico-rastoseguro.md  reglas_negocio.md  reto-aseguradora-del-sur.md  reto-inicial.md  uso_ia.md
entregables/: README.md
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
models/: anomaly_detector.joblib  fraud_classifier.joblib
notebooks/: 01_exploracion_datos.ipynb  02_modelo_fraude.ipynb  03_evaluacion_modelo.ipynb
pipelines/: __init__.py
presentation/: README.md  RastroSeguro-Pitch.md  pitch.md
r/: 01_validacion_metricas.R  02_exploracion_siniestros.Rmd  README.md
reports/: benchmark_preguntas_pdf.json  casos_estrella.json  model_metrics.json  pre_pitch_checklist.md
scripts/: export_pitch_pdf.ps1  export_pitch_pdf.py  load_synthetic_to_oracle.sh
src/: __init__.py
tests/: test_agent.py  test_agent_llm.py  test_agent_routing.py  test_api_bridge.py  test_branch_rules.py  test_categorical_scoring.py  test_claim_signals.py  test_critical_rules.py  test_deliverable_checks.py  test_document_extraction.py  test_fraud_rings.py  test_graph_scoring.py  test_jeremy_core.py  test_model_integration.py  test_nlp_scoring.py  test_pdf_signal_alignment.py  test_pipeline_steps.py  test_reports.py  test_rescore_guardrail.py  test_scoring_calibration.py  test_simulator.py
(+229 files in other folders)
