[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rastroseguro"
version = "0.1.0"
description = "RastroSeguro antifraud scoring API and offline data/model pipelines."
requires-python = ">=3.11"

# Runtime dependencies: only what the deployed product (api.main) needs at
# request time. Mirrors requirements.txt, which deploy still consumes.
dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.4.0",
    "requests>=2.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.2.0",
]

[project.optional-dependencies]
# Offline tooling under pipelines/ (scraping + Excel export). Not installed in
# the deploy image; keeps the runtime footprint smaller.
pipelines = [
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
]
# Local/CI developer tooling: tests + quality guardrails (§5 of the architecture doc).
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "vulture>=2.11",
    "import-linter>=2.0",
]

[tool.setuptools]
packages = ["api", "src", "pipelines"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["data", "models", "reports", "frontend"]

[tool.ruff.lint]
# Pragmatic default; tighten over time. F = pyflakes, I = import sorting, E/W = pycodestyle.
select = ["E", "W", "F", "I"]
ignore = ["E501"]  # line length handled by formatter; long strings exist in domain messages

[tool.vulture]
min_confidence = 80
paths = ["src", "api"]

# Layer contracts (run with: lint-imports). Enforces that the deployed code
# (api/src) never depends on the offline pipelines, and that infrastructure
# never reaches up into the API layer.
[tool.importlinter]
root_packages = ["api", "src", "pipelines"]

[[tool.importlinter.contracts]]
name = "Deployed code must not import offline pipelines"
type = "forbidden"
source_modules = ["api", "src"]
forbidden_modules = ["pipelines"]

[[tool.importlinter.contracts]]
name = "Infrastructure must not depend on the API layer"
type = "forbidden"
source_modules = ["src.infrastructure"]
forbidden_modules = ["api"]
